--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "projeto fullstack (treinamento)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev":"next dev"
+    
   },
   "author": "",
   "license": "MIT",
